# scrabble-rs

./: Cargo.toml  README.md  board.rs  board_view.rs  game.rs  gui.rs  logging.yaml  main.rs  mod.rs  rack_view.rs  selectable.rs  tile_bag.rs
src/: board.rs  board_view.rs  controller.rs  gui.rs  main.rs  rack_view.rs  tile_bag.rs
src/game/: board.rs  game.rs  mod.rs  tile_bag.rs
src/gui/: board_view.rs  gui.rs  mod.rs  rack_view.rs  space_view.rs
